fixed translucent welcome message alignment issue.

--- a/src/components/Banner/style.css
+++ b/src/components/Banner/style.css
@@ -13,10 +13,16 @@
 }
 
 .welcomeMessage {
+    color: white;
+}
+
+.welcomeWrapper {
     align-self: flex-end;
     width: 100%;
     background-color: rgba(47, 79, 79, 0.73);
     margin-bottom: 0;
-    color: white;
-    text-align: center;
+}
+
+.rowContainer {
+    text-align: none;
 }
